# Embedded_Linux_Tasks

./: PyWhatKit_DB.txt
C++/Lecture 1/: ASCII_Table.cpp  Decide_Vowel_or_Not.cpp  Max_bet_3_nums.cpp  Multiplication_Table.cpp  Right_Angle_Triangle.cpp  Summation_of_digits.cpp  a.out  change_decimal_to_binary_vice_versa.cpp
C++/Lecture 2/: Delete_Number_From_Arr.cpp  Lambda_Sort.cpp  Lambda_Square.cpp  Max_num_of_Arr.cpp  Merge_Two_Arrays(C-Style).cpp  Merge_Two_Arrays(Cpp-Style).cpp  Search_For_Num_in_Arr.cpp  a.out  even_odd_num_Arr.cpp
C++/Lecture 2/Contact_Book_Project/: main.cpp  (+3 more)
C++/Lecture 3/: Check_all_arr_even.cpp  Check_any_value_even.cpp  Check_char_digit.cpp  calculate_Accumlate_arr.cpp  fill_arr_sequentially.cpp  handle_interrupt_signal.cpp
C++/Lecture 3/Backtrace_Task/: Backtrace.cpp  Backtrace.hpp  CMakeLists.txt  main.cpp
Lecture 1/: Task1.py  Task2.py  Task3.py  Task4.py  Task5.py
Lecture 2/: get_loc.py
Lecture 2/Favourite_Websites_Task/: firelink.py
Lecture 3/pyautogui_Task/: Download_Last_Lecture_in_Diploma.py
Lecture 5 & 6/Add & Subtract GUI/: Add_Sub_Gui.py
Lecture 5 & 6/Chatting_Application/: Chatting_Application.py
Lecture 5 & 6/Factorial Calculator GUI/: Factorial_Calculator_GUI.py
Lecture 5 & 6/Reverse String Gui/: Reverse String.py
Lecture_3/Deoxygen_Scrapping_Task/: deoxygen_scrapping.py  output.csv
Lecture_4/AVR_GPIO_Init_Generator/: AVR_GPIO_Init_Generator.py  Init_PORTA_DIR.c
Lecture_4/Alexa_Project/: Alexa.py
Lecture_4/Class_Generator_Task/: Class_Generator.py  LED.cpp  LED.hpp
Python/Lecture 2/: get_loc.py
(+14 files in other folders)
